Fix z-index interaction bug on host

--- a/http/host.css
+++ b/http/host.css
@@ -17,6 +17,7 @@ html.hostgame {
 	position: absolute;
 	top: 0; right: 0; bottom: 0; left: 0;
 	overflow: hidden;
+	z-index: -1;
 }
 #progress.hide {
 	opacity: 0;
